css/style.css
/* ... */
.subheading{
    display: block;
    font-size: 1.6rem;
    color: #cf711f;
    font-weight: 500;
    letter-spacing: 0.75px;
    margin-bottom: 1.8rem;
    text-transform: uppercase;
}

.hero-description{
    font-size: 1.4rem;
    line-height: 1.6;
    margin-bottom: 4rem;
}



.btn, .btn:link, .btn:visited {
    display: inline-block;
    text-decoration: none;
    font-size: 1.4rem;
    border-radius: 9px;
    padding: 1.2rem 3rem;
    font-weight: 600;
    border: none;
    transition: all 0.3s;
    border: none;
    cursor: pointer;
    font-family: inherit;
    
}

.btn--full:link ,.btn--full:visited{
    background-color: #e67e22;
    color: #fff;
    transition: background-color 0.3s;
}

.btn--full:hover ,.btn--full:active {
    background-color: #cf711f;
   
}

.btn--outline:link ,.btn--outline:visited{
    background-color: #fff;
    color: #555;
}

.btn--outline:hover ,.btn--outline:active {
    background-color: #fdf2e9;
    /* trick to set border inside */
    box-shadow: inset 0 0 0 3px #fff;
}

.btn--form{
    background-color: #45260a;
    color: #fdf2e9;
    align-self: end;
    padding: 0.6rem;
}

.btn--form:hover{
    background-color: #fff;
    color: #555;
}

.margin-right-sm{
    margin-right: 1.6rem !important;
}

.margin-bottom-md{
margin-bottom:3.8rem !important;
}

.delivered-meals{
   display: flex;
   gap: 1.6rem;
   align-items: center;
  margin-top: 6rem;

}

.delivered-imgs{
    display: flex;
    
}

.delivered-imgs img{
    height: 3.8rem;
    width: 3.8rem; /* not needed but may cause issue in safari brower so applied width after height */
    border-radius: 50%;
    margin-right: -1.1rem; /* to make images overlap to each other */
    border: 2px solid #fdf2e9;
}
.delivered-text{
    font-size: 1.4rem;
    font-weight: 600;
}

.delivered-text span{
    color: #cf711f;
    font-weight: 700;
}

.header{
    display: flex;
    align-items: center;
    justify-content: space-between;
   background-color: #fdf2e9;
   /* giving height because we want header to be stikcy later on, so if not sticky we can manage with padding on all 4 sides */
   height: 7.4rem;
   padding: 0 2.8rem;
   position: relative; /* set only for mobile nav */

}
.logo{
    height: 2.4rem;
}

/************** MOBILE NAVIGATION **********/

.btn-mobile-nav{
border: none;
background: none;
cursor: pointer;

display: none; /* by default it should not appear fro desktop */
}

.icon-mobile-nav{
height: 4.8rem;
width: 4.8rem;
color: #333;
}

.icon-mobile-nav[name="close-outline"]{
   display: none; 
    }


/************** STICKY NAVIGATION **********/

.sticky .header{
   position: fixed;
   top: 0;
   bottom: 0;
   width: 100%;
   height: 8rem;
   background-color: rgba(255, 255, 255, 0.97);
   z-index: 999;
   padding-top: 0;
   padding-bottom: 0;
   box-shadow: 0 1.2rem 3.2rem rgba(0,0,0,0.03);
}


/* this is only when sticky is applied the add the margin so that flicker of content doesn't appear*/
.sticky .section-hero{
   margin-top: 9.6rem;
}


/************** NAVIGATION **********/

.main-nav-list{
display: flex;
align-items: center;
list-style: none;
gap: 4rem;
}

.main-nav-link:link, .main-nav-link:visited{
    text-decoration: none;
    color: #333;
    font-weight: 500;
    font-size: 1.5rem;
    transition: all 0.3s;
}

.main-nav-link:hover, .main-nav-link:active{
background-color: #cf711f;
padding: 0.7rem;
border-radius: 10px;
color: #fff;
}


/* .main-nav-link.nav-cta means this style will be applied to that element which has the two both classes only, so . is used to conact them */
.main-nav-link.nav-cta:link, .main-nav-link.nav-cta:visited{
   padding: 0.8rem 1.8rem;
   border-radius: 9px;
   color: #fff;
   background-color: #e67e22;
}

.main-nav-link.nav-cta:hover, .main-nav-link.nav-cta:active{
    background-color: #cf711f;
 }


 .section-how{
    padding: 8.3rem 0;
 }

 .grid{
    display: grid;
    column-gap: 2rem;
    row-gap: 6rem;
 }

 .grid:not(:last-child){
    margin-bottom: 6rem;
 }



 .grid--center-v{
    align-items: center;
 }

 .grid--2--cols{
    grid-template-columns: repeat(2,1fr);
 }

 .grid--3--cols{
    grid-template-columns: repeat(3,1fr);
 }

 .grid--4--cols{
    grid-template-columns: repeat(4,1fr);
 }
 .grid--5--cols{
    grid-template-columns: repeat(5,1fr);
 }
 .container{
    max-width: 120rem;
    padding: 0 6.4rem;
    margin: 0 auto;
 }


 .step-img{
    width: 35%;
 }

 .step-img-box{
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative; /* this is set just to make this parent as relative so that before psuedo elment can be set with transform */
 }

 .step-img-box::before, .step-img-box::after{
    content: "";
    display: block;
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
 }

 .step-img-box::before{
    width: 55%;
    padding-bottom:55% ;
    background-color: #fdf2e9;
    z-index: -2; /* set the negative value so this goes behind it parent, that is image  it as much high negative value that much behind it will be*/ 

 }

 .step-img-box::after{
    width: 42%;
    padding-bottom:42% ;
    background-color: #fae5d3;
    z-index: -1; /* behind the image but on top of the first bigger circle, because its negative value is lower than bigger circle */

 }

 .step-number{
    font-size: 7.2rem;
    font-weight: 600;
    color: #ddd;
    margin-bottom: 1rem;
 }

 .heading-tertiary{
    font-size: 2.8rem;
    line-height: 1;
    margin-bottom: 2.5rem;
 }

 .step-description{

    font-size: 1.2rem;
    line-height: 1.5;
 }


 /************** FEATURED IN **********/

 .section-featured{
    padding: 3.5rem 0 2.8rem 0;
 }

 .heading-featured-in{
    font-size: 2rem;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-transform: uppercase;
    text-align: center;
    margin-bottom: 2rem;
    color: #888;
 }

 .logos{
    display: flex;
    justify-content: space-around;
 }
/* ... */

